removed unused shader (replaced long ago)

--- a/TSBB11/TSBB11.vcxproj.filters
+++ b/TSBB11/TSBB11.vcxproj.filters
@@ -103,9 +103,6 @@
     <None Include="src\shaders\filtershader.frag">
       <Filter>Source Files\Shaders</Filter>
     </None>
-    <None Include="src\shaders\plaintextureshader.frag">
-      <Filter>Source Files\Shaders</Filter>
-    </None>
     <None Include="src\shaders\plaintextureshader.vert">
       <Filter>Source Files\Shaders</Filter>
     </None>
@@ -131,6 +128,9 @@
       <Filter>Source Files\Shaders</Filter>
     </None>
     <None Include="src\shaders\terrainshader.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\plaintextureshader1.frag">
       <Filter>Source Files\Shaders</Filter>
     </None>
   </ItemGroup>
