--- a/TSBB11/TSBB11.vcxproj
+++ b/TSBB11/TSBB11.vcxproj
@@ -319,7 +319,7 @@
     <None Include="src\shaders\terrainshader.frag" />
     <None Include="src\shaders\terrainshader.vert" />
     <None Include="src\shaders\normalshader.frag" />
-    <None Include="src\shaders\plaintextureshader.frag" />
+    <None Include="src\shaders\plaintextureshader1.frag" />
     <None Include="src\shaders\plaintextureshader.vert" />
     <None Include="src\shaders\skyshader.frag" />
     <None Include="src\shaders\skyshader.vert" />
