--- a/TSBB11/makefile
+++ b/TSBB11/makefile
@@ -31,7 +31,7 @@ GCC = g++ -Wall -pedantic -std=c++0x
 ifeq ($(PLATFORM),linux)
 INC += $(shell pkg-config --cflags sdl2)
 LINKS = $(shell pkg-config --libs sdl2)
-LINKS += -lGL -lglut -lm -lXt -lX11
+LINKS += -lGL -lGLU -lglut -lm -lXt -lX11 -Wl,-rpath,./lib/AntTweakLinux -Llib/AntTweakLinux -lAntTweakBar  
 GCC += -std=gnu++0x
 endif
 
