--- a/TSBB11/TSBB11.vcxproj
+++ b/TSBB11/TSBB11.vcxproj
@@ -94,6 +94,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Simulation\C++\fluidsolver.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\camera.cpp" />
     <ClCompile Include="src\common\GL_utilities.c" />
@@ -102,9 +103,12 @@
     <ClCompile Include="src\common\SDL_util.c" />
     <ClCompile Include="src\common\Windows\glew.c" />
     <ClCompile Include="src\readData.cpp" />
-    <ClCompile Include="src\voxel.cpp" />
+    <ClCompile Include="src\Voxelgrid.cpp" />
+    <ClCompile Include="src\voxelTesting.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Simulation\C++\fluidsolver.h" />
+    <ClInclude Include="fluidDataStructures.h" />
     <ClInclude Include="src\camera.h" />
     <ClInclude Include="src\common\GL_utilities.h" />
     <ClInclude Include="src\common\loadobj.h" />
@@ -114,7 +118,8 @@
     <ClInclude Include="src\common\Windows\sdl2\SDL.h" />
     <ClInclude Include="src\common\Windows\wglew.h" />
     <ClInclude Include="src\readData.h" />
-    <ClInclude Include="src\voxel.h" />
+    <ClInclude Include="src\Voxelgrid.h" />
+    <ClInclude Include="src\voxelTesting.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="makefile" />
