--- a/TSBB11/makefile
+++ b/TSBB11/makefile
@@ -8,6 +8,7 @@ endif
 $SOURCEDIR = src
 
 CPP_FILES := $(wildcard src/*.cpp)
+CPP_FILES += src/common/xml/pugixml.cpp
 
 OBJ_FILES_CPP := $(addprefix obj/,$(notdir $(CPP_FILES:.cpp=.o)))
 
@@ -16,13 +17,13 @@ C_FILES_COMMON := $(wildcard src/common/*.c)
 
 OBJ_FILES_COMMON := $(addprefix obj/,$(notdir $(C_FILES_COMMON:.c=.o)))
 
-INC = -Isrc/ -Isrc/common/ -Isrc/common/glm -Isrc/common/AntTweak
+INC = -Isrc/ -Isrc/common/ -Isrc/common/glm -Isrc/common/AntTweak -Isrc/common/xml
 MAIN = main.cpp
 OUT = bin/WaterFlow
 
 ifeq ($(PLATFORM),mac)
 INC += -F/Library/Frameworks/
-LINKS =  -framework OpenGL -framework GLUT -framework Cocoa -framework SDL2 -L/usr/local/lib -lAntTweakBar
+LINKS =  -framework OpenGL -framework GLUT -Isrc/common/xml -framework Cocoa -framework SDL2 -L/usr/local/lib -lAntTweakBar
 endif
 
 GCC = g++ -Wall -pedantic -std=c++0x
@@ -31,7 +32,7 @@ GCC = g++ -Wall -pedantic -std=c++0x
 ifeq ($(PLATFORM),linux)
 INC += $(shell pkg-config --cflags sdl2)
 LINKS = $(shell pkg-config --libs sdl2)
-LINKS += -lGL -lGLU -lglut -lm -lXt -lX11 -Wl,-rpath,./lib/AntTweakLinux -Llib/AntTweakLinux -lAntTweakBar  
+LINKS += -lGL -lGLU -lglut -lm -lXt -lX11 -Wl,-rpath,./lib/AntTweakLinux -Llib/AntTweakLinux -lAntTweakBar
 GCC += -std=gnu++0x
 endif
 
@@ -44,6 +45,9 @@ obj/%.o : src/common/%.c
 	$(GCC) -c -o $@ $< $(INC)
 
 obj/%.o : src/%.cpp
+	$(GCC) -c -o $@ $< $(INC)
+
+obj/%.o : src/common/xml/%.cpp
 	$(GCC) -c -o $@ $< $(INC)
 
 TWtest:
