Large merge, untested, moving towards x64 on simulation.

--- a/TSBB11/TSBB11.vcxproj.filters
+++ b/TSBB11/TSBB11.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -45,19 +45,25 @@
     <ClCompile Include="src\camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\common\SDL_util.c">
-      <Filter>Source Files\Common</Filter>
-    </ClCompile>
     <ClCompile Include="src\readData.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\voxelTesting.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="src\common\Utilities.c">
+      <Filter>Source Files\Common</Filter>
     </ClCompile>
     <ClCompile Include="..\Simulation\C++\fluidsolver.cpp">
       <Filter>Simulation</Filter>
     </ClCompile>
     <ClCompile Include="src\Voxelgrid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\voxelTesting.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\program.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\myDrawable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -83,13 +89,14 @@
     <ClInclude Include="src\common\Windows\sdl2\SDL.h">
       <Filter>Header Files\Common</Filter>
     </ClInclude>
-    <ClInclude Include="src\common\SDL_util.h">
-      <Filter>Header Files\Common</Filter>
-    </ClInclude>
     <ClInclude Include="src\readData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\voxelTesting.h">
+    <ClInclude Include="src\common\Utilities.h">
+      <Filter>Header Files\Common</Filter>
+    </ClInclude>
+    <ClInclude Include="src\voxel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\Simulation\C++\fluidsolver.h">
@@ -101,14 +108,17 @@
     <ClInclude Include="src\fluiddatastructures.h">
       <Filter>Simulation</Filter>
     </ClInclude>
+    <ClInclude Include="src\common\AntTweak\AntTweakBar.h">
+      <Filter>Header Files\Common</Filter>
+    </ClInclude>
+    <ClInclude Include="src\program.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\myDrawable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\shaders\main.frag">
-      <Filter>Source Files\Shaders</Filter>
-    </None>
-    <None Include="src\shaders\main.vert">
-      <Filter>Source Files\Shaders</Filter>
-    </None>
     <None Include="src\shaders\combineshader.frag">
       <Filter>Source Files\Shaders</Filter>
     </None>
@@ -116,9 +126,6 @@
       <Filter>Source Files\Shaders</Filter>
     </None>
     <None Include="src\shaders\filtershader.frag">
-      <Filter>Source Files\Shaders</Filter>
-    </None>
-    <None Include="src\shaders\plaintextureshader.frag">
       <Filter>Source Files\Shaders</Filter>
     </None>
     <None Include="src\shaders\plaintextureshader.vert">
@@ -134,6 +141,27 @@
       <Filter>Source Files</Filter>
     </None>
     <None Include="src\shaders\normalshader.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\simplevoxels.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\simplevoxels.geom">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\simplevoxels.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\skyshader.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\skyshader.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\terrainshader.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="src\shaders\terrainshader.vert">
       <Filter>Source Files\Shaders</Filter>
     </None>
   </ItemGroup>
