--- a/TSBB11/makefile
+++ b/TSBB11/makefile
@@ -1,5 +1,6 @@
 ifeq ($(shell uname), Darwin)
 	PLATFORM=mac
+	ANT=ant
 endif
 ifeq ($(shell uname), Linux)
 	PLATFORM=linux
@@ -7,6 +8,7 @@ endif
 $SOURCEDIR = src
 
 CPP_FILES := $(wildcard src/*.cpp)
+
 OBJ_FILES_CPP := $(addprefix obj/,$(notdir $(CPP_FILES:.cpp=.o)))
 
 
@@ -14,13 +16,13 @@ C_FILES_COMMON := $(wildcard src/common/*.c)
 
 OBJ_FILES_COMMON := $(addprefix obj/,$(notdir $(C_FILES_COMMON:.c=.o)))
 
-INC = -Isrc/ -Isrc/common/ -Isrc/common/glm
+INC = -Isrc/ -Isrc/common/ -Isrc/common/glm -Isrc/common/AntTweak
 MAIN = main.cpp
 OUT = bin/WaterFlow
 
 ifeq ($(PLATFORM),mac)
 INC += -F/Library/Frameworks/
-LINKS =  -framework OpenGL -framework GLUT -framework Cocoa -framework SDL2
+LINKS =  -framework OpenGL -framework GLUT -framework Cocoa -framework SDL2 -L/usr/local/lib -lAntTweakBar
 endif
 
 GCC = g++ -Wall -pedantic -std=c++0x
@@ -29,9 +31,11 @@ GCC = g++ -Wall -pedantic -std=c++0x
 ifeq ($(PLATFORM),linux)
 INC += $(shell pkg-config --cflags sdl2)
 LINKS = $(shell pkg-config --libs sdl2)
-LINKS += -lGL -lglut -lm -lXt -lX11 
+LINKS += -lGL -lGLU -lglut -lm -lXt -lX11 -Wl,-rpath,./lib/AntTweakLinux -Llib/AntTweakLinux -lAntTweakBar  
 GCC += -std=gnu++0x
 endif
+
+
 
 all: $(OBJ_FILES_COMMON) $(OBJ_FILES_CPP)
 	$(GCC) obj/*.o $(MAIN) -o $(OUT) $(INC) $(LINKS)
@@ -42,8 +46,11 @@ obj/%.o : src/common/%.c
 obj/%.o : src/%.cpp
 	$(GCC) -c -o $@ $< $(INC)
 
+TWtest:
+	$(GCC) TwSimpleSDL.c -o $(OUT) $(INC) $(LINKS)
+
 clean :
 	rm obj/*.o
-	
+
 docs:
 	doxygen resources/Doxyfile
