Working on windows

--- a/TSBB11/TSBB11.vcxproj
+++ b/TSBB11/TSBB11.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Analyze|Win32">
@@ -287,7 +287,6 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\Simulation\C++\fluidsolver.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\camera.cpp" />
     <ClCompile Include="src\common\GL_utilities.c" />
@@ -295,14 +294,14 @@
     <ClCompile Include="src\common\LoadTGA.c" />
     <ClCompile Include="src\common\Utilities.c" />
     <ClCompile Include="src\common\Windows\glew.c" />
+    <ClCompile Include="src\fluidsolver.cpp" />
+    <ClCompile Include="src\grid.cpp" />
     <ClCompile Include="src\myDrawable.cpp" />
     <ClCompile Include="src\program.cpp" />
     <ClCompile Include="src\readData.cpp" />
-    <ClCompile Include="src\Voxelgrid.cpp" />
     <ClCompile Include="src\voxelTesting.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Simulation\C++\fluidsolver.h" />
     <ClInclude Include="src\camera.h" />
     <ClInclude Include="src\common\AntTweak\AntTweakBar.h" />
     <ClInclude Include="src\common\GL_utilities.h" />
@@ -313,10 +312,11 @@
     <ClInclude Include="src\common\Windows\sdl2\SDL.h" />
     <ClInclude Include="src\common\Windows\wglew.h" />
     <ClInclude Include="src\fluiddatastructures.h" />
+    <ClInclude Include="src\fluidsolver.h" />
+    <ClInclude Include="src\grid.h" />
     <ClInclude Include="src\myDrawable.h" />
     <ClInclude Include="src\program.h" />
     <ClInclude Include="src\readData.h" />
-    <ClInclude Include="src\Voxelgrid.h" />
     <ClInclude Include="src\voxelTesting.h" />
   </ItemGroup>
   <ItemGroup>
