Works on VS for me now

--- a/TSBB11/TSBB11.vcxproj
+++ b/TSBB11/TSBB11.vcxproj
@@ -317,6 +317,7 @@
     <None Include="resources\Doxyfile" />
     <None Include="resources\mainpage.dox" />
     <None Include="src\shaders\combineshader.frag" />
+    <None Include="src\shaders\computeShader.comp" />
     <None Include="src\shaders\confidenceshader.frag" />
     <None Include="src\shaders\filtershader.frag" />
     <None Include="src\shaders\terrainshader.frag" />
