added files to VS

--- a/TSBB11/TSBB11.vcxproj
+++ b/TSBB11/TSBB11.vcxproj
@@ -299,6 +299,7 @@
     <ClCompile Include="src\readData.cpp" />
     <ClCompile Include="src\shallowWater.cpp" />
     <ClCompile Include="src\ShallowWater2.cpp" />
+    <ClCompile Include="src\shallowWater3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\camera.h" />
@@ -315,6 +316,7 @@
     <ClInclude Include="src\readData.h" />
     <ClInclude Include="src\shallowWater.h" />
     <ClInclude Include="src\ShallowWater2.h" />
+    <ClInclude Include="src\shallowWater3.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="makefile" />
