--- a/TSBB11/TSBB11.vcxproj
+++ b/TSBB11/TSBB11.vcxproj
@@ -322,22 +322,20 @@
     <None Include="makefile" />
     <None Include="resources\Doxyfile" />
     <None Include="resources\mainpage.dox" />
-    <None Include="src\shaders\combineshader.frag" />
+    <None Include="src\shaders\addFlowShader.comp" />
     <None Include="src\shaders\heightMap.comp" />
-    <None Include="src\shaders\confidenceshader.frag" />
     <None Include="src\shaders\fieldShader.comp" />
-    <None Include="src\shaders\filtershader.frag" />
     <None Include="src\shaders\normals.comp" />
     <None Include="src\shaders\normConv.comp" />
+    <None Include="src\shaders\preserveShader.comp" />
     <None Include="src\shaders\terrainshader.frag" />
     <None Include="src\shaders\terrainshader.vert" />
-    <None Include="src\shaders\normalshader.frag" />
-    <None Include="src\shaders\plaintextureshader.vert" />
     <None Include="src\shaders\simplevoxels.frag" />
     <None Include="src\shaders\simplevoxels.geom" />
     <None Include="src\shaders\simplevoxels.vert" />
     <None Include="src\shaders\skyshader.frag" />
     <None Include="src\shaders\skyshader.vert" />
+    <None Include="src\shaders\watershader.frag" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
